[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "machine-learning"
version = "0.1.0"
description = "Application FastAPI / Streamlit pour prédiction d'affluence"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pandas==2.1.0",
    "numpy==1.24.3",
    "scikit-learn==1.3.0",
    "sqlalchemy==2.0.19",
    "psycopg2-binary==2.9.9",
    "matplotlib==3.7.2",
    "seaborn==0.13.2",
    "streamlit==1.25.0"
]
